--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mui": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fullpage": "^0.1.19",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.14",
     "zustand": "^5.0.3"
