--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.5",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
