--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-fullpage": "^0.1.19",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.14",
     "zustand": "^5.0.3"
