--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^4.0.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-devtools": "^6.1.1",
     "react-dom": "^18.3.1",
     "react-fullpage": "^0.1.19",
     "react-responsive": "^10.0.1",
