--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-devtools": "^6.1.1",
     "react-dom": "^18.3.1",
     "react-fullpage": "^0.1.19",
+    "react-hot-toast": "^2.5.2",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.2.0",
     "styled-components": "^6.1.14",
