--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@yaireo/tagify": "^4.33.2",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.5",
     "jwt-decode": "^4.0.0",
     "mui": "^0.0.1",
     "react": "^18.3.1",
