--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@mui/material": "^6.4.5",
     "@react-oauth/google": "^0.12.1",
     "@yaireo/tagify": "^4.33.2",
